# Superstore-Marketing-Campaign

./: .gitignore  README.md  causal model.ipynb  config.yaml  datadictionary.csv  modeling_v2.ipynb  prepocessing_v1.ipynb  prepocessing_v2.ipynb  pyproject.toml  ruff.toml  test.parquet  train.parquet  val.parquet
Causal_Model/: causal model.ipynb
Data_preprocessed/: train.parquet
Modeling/: modeling_v1.ipynb
Modeling/models/: LightGBM.pkl
Preprocessing/: datadictionary.xlsx  prepocessing_v1.ipynb  prepocessing_v2.ipynb  test.parquet  train.parquet  val.parquet
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlruns/190956197899726195/: meta.yaml
models/: CatBoost.pkl  XGBoost.pkl  catboost_automl_tuned.pkl  catboost_baseline.pkl  catboost_best_params.json  catboost_optuna.db  catboost_tuned.pkl  lightgbm_automl_tuned.pkl  lightgbm_baseline.pkl  lightgbm_best_params.json  lightgbm_optuna.db  lightgbm_tuned.pkl  randomforest_baseline.pkl  randomforest_best_params.json  randomforest_optuna.db  randomforest_tuned.pkl  stacking_baseline.pkl  xgboost_automl_tuned.pkl  xgboost_baseline.pkl  xgboost_best_params.json  xgboost_optuna.db  xgboost_tuned.pkl
results/: model_results.csv
src/: hyperparameter_tuning.py  preprocess.py  train_model.py
src/monitoring/: drift_detector.py  run_monitor.py
src/utils/: config.py  mlflow_utils.py
tests/: test_config.py  test_model_pipeline.py  test_preprocess.py  test_train_model_integration.py
(+812 files in other folders)
