[tool.poetry]
name = "superstore-marketing-campaign"
version = "0.1.0"
description = "ML pipeline for Superstore marketing campaign"
authors = ["Arturo Medina <arturo-mn@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^78.1.0"
mlflow = "^2.21.3"
optuna = "^4.3.0"

[tool.poetry.dev-dependencies]
ruff = "^0.11.6"
nbqa = "^1.9.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]

