[tool.poetry]
name = "superstore-marketing-campaign"
version = "0.1.0"
description = "ML pipeline for Superstore marketing campaign"
authors = ["Arturo Medina <arturo-mn@outlook.com>"]
license = "MIT"
packages = [
    {include = "src"},
    {include = "utils"}
]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^78.1.0"
mlflow = "^2.21.3"
optuna = "^4.3.0"
seaborn = "^0.13.2"
catboost = "^1.2.8"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
lightgbm = "^4.6.0"
joblib = "^1.4.2"
PyYAML = "^6.0.2"

[tool.poetry.dev-dependencies]
ruff = "^0.11.6"
nbqa = "^1.9.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = ["tests"]

